fixed z-index

--- a/.docker-config/node/src/styles/components/navigationBar.scss
+++ b/.docker-config/node/src/styles/components/navigationBar.scss
@@ -6,6 +6,7 @@
   height: 80px;
   position: fixed;
   top: 0;
+  z-index: 4;
 
 
   font-family: "Nunito";
